refactor(notes): remove updateImageMetadata and redundant validation
    - Remove PATCH /api/notes/{id}/image-metadata from controller and service
    - Remove duplicate regex extraction logic from NoteServiceImpl
    - Remove redundant manual field null checks in createNote and updateNote
    - Clean unused imports across note components
    - Update NoteControllerTest and NoteServiceImplTest test coverage